--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="http://image.shutterstock.com/display_pic_with_logo/2422508/286169633/stock-photo-fire-flames-on-a-black-background-286169633.jpg" class="img-medium"/>
             <hr>
         </div>
         <br>
