--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            WELCOME to MY WEB APP!
+            WELCOME TO MY WEB APP!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
