[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            WELCOME TO MY WEB APP!
+            <h1>WELCOME TO MY WEB APP!</h1>
+            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
